Add gradle build dir function